# lichtspiel-github

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  tsconfig.base.json
.claude/: launch.json
apps/desktop/: README.md  main.cjs  package.json
apps/desktop/scripts/: prepare.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/live-bridge/: demo-feeder.mjs  package.json
apps/live-bridge/src/: abletonSnapshot.ts  bench.ts  cli.ts  index.ts  log.ts  mapping-selftest.ts  mappingStore.ts  mlClient.ts  osc-selftest.ts  oscCodec.ts  oscRouter.ts  selftest.ts  serialosc-selftest.ts  serialosc.ts  validate.ts  websocketServer.ts
apps/ml-service/: README.md  pyproject.toml
apps/ml-service/scripts/: build_anchors.py  generate_to_ableton.py
apps/ml-service/src/lichtspiel_ml/: __init__.py  app.py  cache.py  codegen.py  embed_audio.py  embed_midi.py  embed_text.py  env.py  generate.py  retrieve.py  schemas.py  vibe.py
apps/ml-service/tests/: test_codegen.py  test_generate.py  test_retrieve.py  test_vibe.py
apps/mrt2-bridge/: .env.example  .gitignore  INSPECTION_NOTES.md  README.md  package.json  tsconfig.json  vitest.config.ts
apps/mrt2-bridge/docs/: ableton-sdk-integration.md  architecture.md  demo-script.md  install-portability.md  mrt2-integration.md  protocol.md
apps/mrt2-bridge/scripts/: liveLichtspielCheck.ts
apps/mrt2-bridge/sidecar/: README.md  mrt2_sidecar.py
apps/mrt2-bridge/src/: config.ts  index.ts  logging.ts
apps/p5-runtime/: index.html  package.json  tsconfig.json  vite.config.ts
apps/p5-runtime/scripts/: idioms-smoke.ts  mapping-smoke.ts  smoke.mjs  takeover-smoke.ts
apps/p5-runtime/src/: audioReactive.ts  keyboard.ts  main.ts  messageBus.ts  monomeDevices.ts  monomeMapping.ts  seededRng.ts  style.css  (+4 more)
demo/: README.md
docs/: ableton-integration.md  ableton-mapping-ui.md  architecture.md  competitive_positioning.md  concept.md  generative-architecture.md  hackathon_demo_script.md  idioms.md  monome.md  setup.md  troubleshooting.md
integrations/remote-script/: README.md
lichtspiel-course/: _base.html  index.html
lichtspiel-course/modules/: 01-intro.html  02-actors.html  03-language.html  04-bridge.html  05-monome.html  06-resilience.html
max/: README.md  build_patches.py
max/docs/: max_patch_notes.md
max/js/: live_api_helpers.js  message_formatters.js
max/patches/: lichtspiel_controls.maxpat  lichtspiel_probe.maxpat  live_api_helpers.js
max/tools/: README.md  ableton_probe.py  verify-phase5a.mjs
scripts/: dev.sh  generate-manifests.ts
(+176 files in other folders)
