[project]
name = "lichtspiel-ml"
version = "0.1.0"
description = "Lichtspiel retrieval/ML sidecar — metadata → MIR → embedding retrieval over the p5 visual corpus."
requires-python = ">=3.10"
# v0.1 metadata retrieval is stdlib-only. Heavier deps (numpy, fastapi,
# transformers/torch for MERT/ImageBind, faiss) arrive with Phases 6–7 and
# go under the optional groups below so the base service stays installable.
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn>=0.32"]
embed = ["numpy>=1.26", "transformers>=4.44", "torch>=2.2"]
dev = ["pytest>=8"]

[project.scripts]
lichtspiel-ml = "lichtspiel_ml.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lichtspiel_ml"]
