[project]
name = "lichtspiel-ml"
version = "0.1.0"
description = "Lichtspiel retrieval/ML sidecar — metadata → MIR → embedding retrieval over the p5 visual corpus."
requires-python = ">=3.10"
# v0.1 metadata retrieval is stdlib-only. Heavier deps (numpy, fastapi,
# transformers/torch for MERT/ImageBind, faiss) arrive with Phases 6–7 and
# go under the optional groups below so the base service stays installable.
dependencies = []

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn>=0.32"]
embed = ["numpy>=1.26", "transformers>=4.44", "torch>=2.2"]
# Phase 7 audio retrieval via Stable Audio 3's SAME autoencoder — a DISTINCT
# embedding axis from `embed`'s text/MIDI path. SA3 is a LOCAL checkout (not on
# PyPI) and pulls its own pinned torch; edit the path for your machine, or
# install it editable: uv pip install -e /path/to/stable-audio-3
embed-sa3 = [
  "numpy>=1.26",
  "stable-audio-3 @ file:///Volumes/Mac-Storage/GitHub/stable-audio-3",
]
# Generative track (G1 vibe + G3 codegen). Heavy + build-time only.
#   vibe    = CLAP audio->text via transformers ClapModel (laion/larger_clap_general,
#             cached under the HF hub) + librosa MIR. NOTE: torch is listed
#             explicitly — nothing else pulls it in.
#   codegen = Claude API
generate = ["torch>=2.2", "transformers>=4.44", "librosa>=0.10", "soundfile>=0.12", "anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
lichtspiel-ml = "lichtspiel_ml.app:main"
lichtspiel-generate = "lichtspiel_ml.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lichtspiel_ml"]
